[gd_scene load_steps=6 format=3 uid="uid://bgm607rj8w5f7"]

[ext_resource type="Script" uid="uid://cqh2sf6w3pk6m" path="res://scripts/inventory.gd" id="1_hj2ta"]
[ext_resource type="Script" uid="uid://dd72gghvntq2x" path="res://scripts/sub_viewport_scale.gd" id="2_ty45s"]

[sub_resource type="World3D" id="World3D_53g1v"]

[sub_resource type="Environment" id="Environment_yyk2a"]

[sub_resource type="LabelSettings" id="LabelSettings_uae8j"]
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[node name="Inventory" type="Node"]
script = ExtResource("1_hj2ta")

[node name="InventoryContainer" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="InventoryContainer"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.537255)

[node name="SubViewportContainer" type="SubViewportContainer" parent="InventoryContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="InventoryContainer/SubViewportContainer"]
own_world_3d = true
world_3d = SubResource("World3D_53g1v")
transparent_bg = true
handle_input_locally = false
size = Vector2i(256, 224)
render_target_update_mode = 4
script = ExtResource("2_ty45s")

[node name="Camera3D" type="Camera3D" parent="InventoryContainer/SubViewportContainer/SubViewport"]
cull_mask = 1048574
environment = SubResource("Environment_yyk2a")
projection = 1
current = true
fov = 90.0
size = 0.75
near = 0.001

[node name="OmniLight3D" type="OmniLight3D" parent="InventoryContainer/SubViewportContainer/SubViewport/Camera3D"]
layers = 2
light_cull_mask = 4294967294

[node name="ItemWheel" type="Node3D" parent="InventoryContainer/SubViewportContainer/SubViewport"]
unique_name_in_owner = true

[node name="ItemName" type="Label" parent="InventoryContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.2
grow_horizontal = 2
grow_vertical = 0
label_settings = SubResource("LabelSettings_uae8j")
horizontal_alignment = 1
vertical_alignment = 1
